update docs [skip ci]

--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Zenodo provides a sandbox (testing environment) and a production environment. They work the same in principle. Therefore, only one implementation is needed, which is `ZenodoRecord` (the interface to a record in Zenodo). Pass `sandbox=True` to use the testing environment.\n",
     "\n",
-    "The below diagram shows the abstract base class with its abstract methods (indicated by italics). Note, that `upload_file()` is *not* abstract. The subclasses must implement `__upload_file__`, which uploads a file to the repository record. `upload_file()` is basically a wrapper, which additionally allows generating metadata files of the uploaded files. We will explore this feature later in this section.\n",
+    "The below diagram shows the abstract base class with its abstract methods (indicated by italics). Note, that `upload_file` is *not* abstract. It depends on the implementation of `__upload_file__` in the subclasses, which uploads a file to the repository record. `upload_file()` is basically a wrapper, which additionally allows generating metadata files of the uploaded files. We will explore this feature later in this section.\n",
     "\n",
     "The `RepositoryInterface` further defines the communication with files. A file object `RepositoryFile` is implemented, providing mandatory properties as well as a download method. A repository implementation (just like the one for Zenodo) must return a Dictionary of `RepositoryFile` objects for the `files` class property (see source code for in-depth explanation and the example at the end of this section).\n",
     "\n",
@@ -170,7 +170,7 @@
    "id": "00482800-885f-482e-a136-10ee167c3a72",
    "metadata": {},
    "source": [
-    "List the just uploaded files, by requesting the current filenames in the repository:"
+    "List the just uploaded files in the repository:"
    ]
   },
   {
@@ -180,20 +180,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m [f\u001b[38;5;241m.\u001b[39mname \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m repo\u001b[38;5;241m.\u001b[39mfiles]\n",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[0m [\u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m repo\u001b[38;5;241m.\u001b[39mfiles]\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'name'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'tmp0.hdf': RepositoryFile(tmp0.hdf),\n",
+       " 'tmp0.jsonld': RepositoryFile(tmp0.jsonld)}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "[f.name for f in repo.files]"
+    "repo.files"
    ]
   },
   {
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fbf04793-b7eb-4377-a904-edb91542b056",
    "metadata": {},
    "outputs": [],
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "02290359-b13b-413d-9b93-9706b3ab087d",
    "metadata": {},
    "outputs": [],
@@ -244,13 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4e75f4fc-6311-470c-9204-93c1c5d768d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp0.hdf\n",
+      "tmp0.jsonld\n",
+      "tmp0.txt\n"
+     ]
+    }
+   ],
    "source": [
     "for file in repo.files:\n",
-    "    print(file.name)"
+    "    print(file)"
    ]
   },
   {
