bugfix position to provide token

--- a/docs/colab/quickstart.ipynb
+++ b/docs/colab/quickstart.ipynb
@@ -55,6 +55,9 @@
     "from h5rdmtoolbox.repository import zenodo\n",
     "from h5rdmtoolbox.tutorial import TutorialConventionZenodoRecordID\n",
     "\n",
+    "import os\n",
+    "os.environ['ZENODO_API_TOKEN'] = 'changeme'\n",
+    "\n",
     "zenodo_repo = zenodo.ZenodoRecord(TutorialConventionZenodoRecordID)\n",
     "cv = h5tbx.convention.from_repo(zenodo_repo, 'tutorial_convention.yaml')"
    ]
@@ -64,16 +67,6 @@
    "metadata": {},
    "source": [
     "Another important step is defining the expected layout of a file. For this simple example, we \"only\" want to require users to provide the attribute \"units\" with every dataset:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['ZENODO_API_TOKEN'] = 'changeme'"
    ]
   },
   {
