allow assigning JSON-LD string to rdf object

--- a/docs/practical_examples/metadata4ing.ipynb
+++ b/docs/practical_examples/metadata4ing.ipynb
@@ -67,7 +67,7 @@
     "with h5tbx.File() as h5:\n",
     "    h5.create_group('metadata')\n",
     "    h5tbx.jsonld.to_hdf(h5.metadata, source='min_m4i_ex.jsonld')\n",
-    "    h5.dump()"
+    "    h5.dump(collapsed=False)"
    ]
   },
   {
@@ -80,6 +80,7 @@
     "print(h5tbx.dump_jsonld(h5.hdf_filename,\n",
     "                        structural=False,\n",
     "                        resolve_keys=True,\n",
+    "                        indent=2,\n",
     "                        context={\"@import\": \"https://w3id.org/nfdi4ing/metadata4ing/m4i_context.jsonld\"}))"
    ]
   },
@@ -108,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
