bugfixe download zenodo and housekeeping

--- a/docs/userguide/wrapper/FAIRAttributes.ipynb
+++ b/docs/userguide/wrapper/FAIRAttributes.ipynb
@@ -88,6 +88,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "feb4342f-7460-4bb1-afe9-6f35158a2a7a",
+   "metadata": {},
+   "source": [
+    "### Assigning metadata to the file rather than the rootgroup\n",
+    "\n",
+    "If we want to describe the file using attributes, the rootgroup \"/\" is the way to go. However, there we might want to distinguish between the actual file and the root group. For this, we can also use the accessory `frdf`, which allows assigning rdf triples to the file.\n",
+    "\n",
+    "In the following example, we add the creation date as a rootgroup-attribute but explain it as a file attribute rather than a group attribute. For the effect, check out the jsonld-dump:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e4fd3c0-110a-4e64-97ff-ad2832304493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "with h5tbx.File(mode='w') as h5:\n",
+    "    h5.attrs[\"creation_date\"] = datetime.today()\n",
+    "    h5.frdf[\"creation_date\"].predicate = \"http://purl.org/dc/terms/created\"\n",
+    "\n",
+    "    print(h5.dump_jsonld(structural=True, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c43376d9-4a06-49a4-90c0-cc8e0a1172c0",
    "metadata": {},
    "source": [
@@ -660,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
