--- a/docs/practical_examples/knowledge_graph.ipynb
+++ b/docs/practical_examples/knowledge_graph.ipynb
@@ -47,7 +47,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "d4d871e0-5bff-42f7-a27d-f1f0337dd964",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -56,60 +58,32 @@
       "{\n",
       "  \"@context\": {\n",
       "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
-      "    \"hdf5\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
+      "    \"hdf\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
       "    \"prov\": \"http://www.w3.org/ns/prov#\",\n",
-      "    \"skos\": \"http://www.w3.org/2004/02/skos/core#\"\n",
+      "    \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"_:N1\",\n",
-      "      \"@type\": \"hdf5:File\",\n",
-      "      \"hdf5:rootGroup\": {\n",
-      "        \"@id\": \"_:N0\",\n",
-      "        \"@type\": \"hdf5:Group\",\n",
-      "        \"hdf5:member\": [\n",
-      "          {\n",
-      "            \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
-      "            \"@type\": [\n",
-      "              \"hdf5:Group\",\n",
-      "              \"prov:Person\"\n",
-      "            ],\n",
-      "            \"foaf:firstName\": \"Matthias\",\n",
-      "            \"foaf:lastName\": \"Probst\",\n",
-      "            \"hdf5:attribute\": [\n",
-      "              {\n",
-      "                \"@id\": \"_:N2\",\n",
-      "                \"@type\": \"hdf5:Attribute\",\n",
-      "                \"hdf5:name\": \"fname\",\n",
-      "                \"hdf5:value\": \"Matthias\"\n",
-      "              },\n",
-      "              {\n",
-      "                \"@id\": \"_:N3\",\n",
-      "                \"@type\": \"hdf5:Attribute\",\n",
-      "                \"hdf5:name\": \"hint\",\n",
-      "                \"hdf5:value\": \"This group could be representing a person.\",\n",
-      "                \"skos:definition\": \"A hint gives helpful information on something.\"\n",
-      "              },\n",
-      "              {\n",
-      "                \"@id\": \"_:N4\",\n",
-      "                \"@type\": \"hdf5:Attribute\",\n",
-      "                \"hdf5:name\": \"lname\",\n",
-      "                \"hdf5:value\": \"Probst\"\n",
-      "              }\n",
-      "            ],\n",
-      "            \"hdf5:name\": \"/contact\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"@id\": \"_:N5\",\n",
-      "            \"@type\": \"hdf5:Dataset\",\n",
-      "            \"hdf5:datatype\": \"H5T_FLOAT\",\n",
-      "            \"hdf5:dimension\": 0,\n",
-      "            \"hdf5:name\": \"/test\",\n",
-      "            \"hdf5:size\": 1\n",
-      "          }\n",
-      "        ],\n",
-      "        \"hdf5:name\": \"/\"\n",
-      "      }\n",
+      "      \"@id\": \"_:69ad64a678055ecde7601c70b432cdd3\",\n",
+      "      \"@type\": \"hdf:File\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"hdf:scalarDataspace\",\n",
+      "      \"@type\": \"hdf:scalarDataspace\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"hdf:H5T_IEEE_F64LE\",\n",
+      "      \"@type\": \"hdf:Datatype\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"_:03e43b66f42e2e7f00f2288985db2abf\",\n",
+      "      \"@type\": \"prov:Person\",\n",
+      "      \"foaf:firstName\": \"Matthias\",\n",
+      "      \"foaf:lastName\": \"Probst\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"@id\": \"https://orcid.org/0000-0001-8729-0482\",\n",
+      "      \"@type\": \"prov:Person\"\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -129,60 +103,24 @@
     "\n",
     "    print(h5.dump_jsonld(indent=2, structural=True, resolve_keys=True))\n",
     "    \n",
-    "g, ctx = h5tbx.jsonld.get_rdflib_graph(h5.hdf_filename)"
+    "graph = h5tbx.get_ld(h5.hdf_filename)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "18754370-f273-4ce0-bedb-13cfab2fd962",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'hdf5': 'http://purl.allotrope.org/ontologies/hdf5/1.8#',\n",
-       " 'prov': 'http://www.w3.org/ns/prov#',\n",
-       " 'foaf': 'http://xmlns.com/foaf/0.1/',\n",
-       " 'skos': 'http://www.w3.org/2004/02/skos/core#'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ctx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b0e139d7-94b8-48fe-b065-3efb03de9489",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# g = rdflib.Graph()\n",
-    "# bn = rdflib.BNode()\n",
-    "# g.add((bn, rdflib.URIRef('https://schema.org/name'), rdflib.Literal('Matthias')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "064a9e31-1fd0-429e-9189-663e950bc52f",
    "metadata": {},
    "outputs": [],
    "source": [
     "kg = kglab.KnowledgeGraph(\n",
-    "    import_graph=g,\n",
-    "    namespaces=ctx)"
+    "    import_graph=graph,\n",
+    "    namespaces={k: str(v) for k, v in dict(graph.namespaces()).items()})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ce1a26f6-ad59-4014-b5b2-dcee38f11a26",
    "metadata": {},
    "outputs": [],
@@ -192,18 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "78c9adf7-43f0-4aa1-8740-149bf3a5f74f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "VIS_STYLE= {\"hdf5\": {\"color\": \"red\", \"size\": 30},\n",
-    "            \"_\": {\"color\": \"black\", \"size\": 20}}"
+    "VIS_STYLE= {\n",
+    "    \"hdf\": {\"color\": \"red\", \"size\": 30},\n",
+    "    \"_\": {\"color\": \"black\", \"size\": 20}\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e8d13d2e-d66e-4028-8909-7192cfef1bf6",
    "metadata": {},
    "outputs": [
@@ -216,8 +156,8 @@
     }
    ],
    "source": [
-    "pyvis_graph= subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
-    "#pyvis_graph.show('graph.html', notebook=True)\n",
+    "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
+    "# pyvis_graph.show('graph.html', notebook=True)\n",
     "# the above call fails in the readthedocs build process... we show an image of the result here:"
    ]
   },
@@ -232,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a44f0039-00b8-44c5-b237-ccba12993bdd",
    "metadata": {},
    "outputs": [
@@ -242,18 +182,19 @@
      "text": [
       "{\n",
       "  \"@context\": {\n",
-      "    \"fname\": \"http://xmlns.com/foaf/0.1/firstName\",\n",
-      "    \"lname\": \"http://xmlns.com/foaf/0.1/lastName\"\n",
+      "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
+      "    \"hdf\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
+      "    \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"http://www.w3.org/ns/prov#Person\",\n",
-      "      \"fname\": \"Matthias\",\n",
-      "      \"lname\": \"Probst\"\n",
+      "      \"@id\": \"_:af3b30750dbfd021eb8843274633ba46\",\n",
+      "      \"@type\": \"hdf:File\"\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"_:N14\",\n",
-      "      \"http://www.w3.org/2004/02/skos/core#definition\": \"A hint\"\n",
+      "      \"@id\": \"_:33501378e9a891ca7b7655ee472f25b4\",\n",
+      "      \"foaf:firstName\": \"Matthias\",\n",
+      "      \"foaf:lastName\": \"Probst\"\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -272,37 +213,27 @@
     "    grp.attrs['@id'] = 'https://orcid.org/0000-0001-8729-0482'\n",
     "    print(h5.dump_jsonld(indent=2, structural=False))\n",
     "\n",
-    "g, ctx = h5tbx.jsonld.get_rdflib_graph(h5.hdf_filename)"
+    "graph = h5tbx.get_ld(h5.hdf_filename, structural=False, use_simple_bnode_value=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3e8834fc-6217-42c3-b442-2565b012f828",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jsonld = h5tbx.dump_jsonld(h5.hdf_filename, indent=2, semantic=True, structural=False)\n",
-    "with open('test.jsonld', 'w') as f:\n",
-    "    f.write(jsonld)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "077911e8-8bc3-4b58-a480-df605bdceae4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "VIS_STYLE= {\"hdf5\": {\"color\": \"red\", \"size\": 30},\n",
-    "            \"_\": {\"color\": \"black\", \"size\": 20},\n",
-    "            \"prof\": {\"color\": \"green\", \"size\": 10},\n",
-    "            \"foaf\": {\"color\": \"green\", \"size\": 10}}"
+    "VIS_STYLE= {\n",
+    "    \"hdf\": {\"color\": \"red\", \"size\": 30},\n",
+    "    \"_\": {\"color\": \"black\", \"size\": 20},\n",
+    "    \"prof\": {\"color\": \"green\", \"size\": 10},\n",
+    "    \"foaf\": {\"color\": \"green\", \"size\": 10}\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "67f99459-8351-4819-8a67-2b58d4b1e398",
    "metadata": {},
    "outputs": [
@@ -315,7 +246,9 @@
     }
    ],
    "source": [
-    "kg_from_jsonld = kglab.KnowledgeGraph().load_jsonld('test.jsonld')\n",
+    "kg_from_jsonld = kglab.KnowledgeGraph().load_rdf_text(\n",
+    "    graph.serialize(format=\"ttl\")\n",
+    ")\n",
     "\n",
     "subgraph = kglab.SubgraphTensor(kg_from_jsonld)\n",
     "pyvis_graph = subgraph.build_pyvis_graph(notebook=True, style=VIS_STYLE)\n",
@@ -358,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
