--- a/docs/practical_examples/metadata4ing.ipynb
+++ b/docs/practical_examples/metadata4ing.ipynb
@@ -67,7 +67,17 @@
     "with h5tbx.File() as h5:\n",
     "    h5.create_group('metadata')\n",
     "    h5tbx.jsonld.to_hdf(h5.metadata, source='min_m4i_ex.jsonld')\n",
-    "    h5.dump(collapsed=False)"
+    "    # h5.dump(collapsed=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e498ce-e029-499c-8b39-13751da18f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(h5tbx.serialize(h5.hdf_filename, format=\"ttl\", structural=False))"
    ]
   },
   {
@@ -77,11 +87,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(h5tbx.dump_jsonld(h5.hdf_filename,\n",
-    "                        structural=False,\n",
-    "                        resolve_keys=True,\n",
-    "                        indent=2,\n",
-    "                        context={\"@import\": \"https://w3id.org/nfdi4ing/metadata4ing/m4i_context.jsonld\"}))"
+    "print(\n",
+    "    h5tbx.serialize(\n",
+    "        h5.hdf_filename,\n",
+    "        format=\"ttl\",\n",
+    "        structural=False,\n",
+    "        indent=2,\n",
+    "        context={\"@import\": \"https://w3id.org/nfdi4ing/metadata4ing/m4i_context.jsonld\"})\n",
+    ")"
    ]
   },
   {
