add name and gix attribute object prop

--- a/docs/userguide/convention/examples/standard_name_convention.ipynb
+++ b/docs/userguide/convention/examples/standard_name_convention.ipynb
@@ -435,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ontolutils import SSNO"
+    "from ssnolib import SSNO"
    ]
   },
   {
@@ -457,14 +457,6 @@
     "\n",
     "hdf_filename = h5.hdf_filename"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76917f96-4487-475d-af05-a1bfe15f2f21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -483,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
