--- a/docs/userguide/misc/QueryHDFWithSPARQL.ipynb
+++ b/docs/userguide/misc/QueryHDFWithSPARQL.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "095506ba-475e-49b5-bf24-47e4780fad06",
    "metadata": {},
    "outputs": [],
    "source": [
     "import rdflib\n",
-    "from ontolutils import SSNO, PIVMETA\n",
+    "from ssnolib import SSNO\n",
     "\n",
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox import jsonld"
@@ -34,264 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "005a9671-2940-4745-ad7c-57acb5e7e405",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<head><style>/*\r\n",
-       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
-       "*/\r\n",
-       ".h5tb-header > div,\r\n",
-       ".h5tb-header > ul {\r\n",
-       "    display: inline;\r\n",
-       "    margin-top: 0;\r\n",
-       "    margin-bottom: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-cls,\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    margin-left: 2px;\r\n",
-       "    margin-right: 10px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 3px;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections label {\r\n",
-       "    display: inline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label > span {\r\n",
-       "    display: inline;\r\n",
-       "    margin-left: 4px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label > span {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:enabled + label {\r\n",
-       "    cursor: pointer;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
-       "    display: block;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label {\r\n",
-       "    width: 140px;\r\n",
-       "    color: #555;\r\n",
-       "    font-weight: 500;\r\n",
-       "    padding: 4px 0 2px 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label:before {\r\n",
-       "    display: inline-block;\r\n",
-       "    content: '+';\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    text-align: center;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:disabled + label:before {\r\n",
-       "    color: #777;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label:before {\r\n",
-       "    content: '-';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list {\r\n",
-       "    display: inline-block !important;\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li {\r\n",
-       "    display: inline-block;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:before {\r\n",
-       "    content: '(';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:after {\r\n",
-       "    content: ')';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li:not(:last-child):after {\r\n",
-       "    content: ',';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-has-index {\r\n",
-       "    text-decoration: underline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li {\r\n",
-       "    background-color: #fcfcfc;\r\n",
-       "    overflow: hidden;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li:nth-child(odd) {\r\n",
-       "    background-color: #efefef;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li:hover {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li > span {\r\n",
-       "    display: inline-block;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label {\r\n",
-       "    width: 140px;\r\n",
-       "    padding-left: 0;\r\n",
-       "    font-weight: bold;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataset {\r\n",
-       "    width: 100px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attributevalue {\r\n",
-       "    width: 100px;\r\n",
-       "    text-align: left;\r\n",
-       "    color: #888;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    font-size: 12px;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label:before {\r\n",
-       "    content: ' ';\r\n",
-       "    display: inline-block;\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    padding-left: 2px;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: center;\r\n",
-       "    color: #aaa;\r\n",
-       "    text-decoration: none !important;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:checked + label:before {\r\n",
-       "    color: #ccc;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dims {\r\n",
-       "    width: 280px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list {\r\n",
-       "    list-style: none;\r\n",
-       "    background-color: rgba(0,0,0,.0);\r\n",
-       "    padding-bottom: 6px;\r\n",
-       "    color: #6a6c73;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list li,\r\n",
-       ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: rgba(0,0,0,.0);\r\n",
-       "}\r\n",
-       "\r\n",
-       "\r\n",
-       "/* Tooltip container */\r\n",
-       ".tooltip {\r\n",
-       "position: relative;\r\n",
-       "display: inline-block;\r\n",
-       "cursor: pointer;\r\n",
-       "}\r\n",
-       "\r\n",
-       "/* Tooltip text */\r\n",
-       ".tooltip .tooltiptext {\r\n",
-       "visibility: hidden;\r\n",
-       "width: 300px;\r\n",
-       "background-color: #555;\r\n",
-       "color: #fff;\r\n",
-       "text-align: center;\r\n",
-       "border-radius: 6px;\r\n",
-       "padding: 5px;\r\n",
-       "position: absolute;\r\n",
-       "z-index: 1;\r\n",
-       "bottom: 125%;\r\n",
-       "left: 50%;\r\n",
-       "margin-left: -60px;\r\n",
-       "opacity: 0;\r\n",
-       "transition: opacity 0.3s;\r\n",
-       "}\r\n",
-       "\r\n",
-       "/* Show the tooltip on hover */\r\n",
-       ".tooltip:hover .tooltiptext {\r\n",
-       "visibility: visible;\r\n",
-       "opacity:  1;\r\n",
-       "}</style></head>\n",
-       "<div class='h5tb-warp'>\n",
-       "\n",
-       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                    <li>\n",
-       "                        <input id=\"group-ds--118809566200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--118809566200\">\n",
-       "                        /<span>(1)</span></label>\n",
-       "                  \n",
-       "<ul class=\"h5tb-attr-list\">\n",
-       "                    </ul>\n",
-       "\n",
-       "                <ul id=\"ds-1-/u-118813512100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-118813517800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-118813517800\">u</label>\n",
-       "                    <span class=\"h5tb-dims\">(4) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a>: coeff<a href=\"https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient</span></a></li><li style=\"list-style-type: none; font-style: italic\">units: m/s</li>\n",
-       "                </ul>\n",
-       "                </ul>\n",
-       "</li>\n",
-       "</ul>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    ds = h5.create_dataset('u', data=[1,2,3,4], attrs={'standard_name': 'coeff', 'units': 'm/s'})\n",
     "    ds.rdf.predicate['standard_name'] = SSNO.hasStandardName\n",
-    "    ds.rdf.object['standard_name'] = PIVMETA.piv_correlation_coefficient\n",
+    "    ds.rdf.object['standard_name'] = \"https://local.org/standard_names/piv_correlation_coefficient\"\n",
     "    h5.dump()"
    ]
   },
@@ -305,72 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7c724298-6b08-4046-91b0-0f55b017938e",
+   "execution_count": null,
+   "id": "e7eb3053-6805-493c-9190-e02f25f0201c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"@context\": {\n",
-      "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
-      "    \"hdf5\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
-      "    \"m4i\": \"http://w3id.org/nfdi4ing/metadata4ing#\",\n",
-      "    \"standard_name\": \"https://matthiasprobst.github.io/ssno#hasStandardName\"\n",
-      "  },\n",
-      "  \"@graph\": [\n",
-      "    {\n",
-      "      \"@id\": \"_:N6\",\n",
-      "      \"@type\": \"hdf5:File\",\n",
-      "      \"hdf5:rootGroup\": {\n",
-      "        \"@id\": \"_:N5\",\n",
-      "        \"@type\": \"hdf5:Group\",\n",
-      "        \"hdf5:member\": {\n",
-      "          \"@id\": \"_:N7\",\n",
-      "          \"@type\": \"hdf5:Dataset\",\n",
-      "          \"hdf5:attribute\": [\n",
-      "            {\n",
-      "              \"@id\": \"_:N8\",\n",
-      "              \"@type\": \"hdf5:Attribute\",\n",
-      "              \"hdf5:name\": \"standard_name\",\n",
-      "              \"hdf5:value\": \"coeff\"\n",
-      "            },\n",
-      "            {\n",
-      "              \"@id\": \"_:N9\",\n",
-      "              \"@type\": \"hdf5:Attribute\",\n",
-      "              \"hdf5:name\": \"units\",\n",
-      "              \"hdf5:value\": \"m/s\"\n",
-      "            }\n",
-      "          ],\n",
-      "          \"hdf5:datatype\": \"H5T_INTEGER\",\n",
-      "          \"hdf5:dimension\": 1,\n",
-      "          \"hdf5:name\": \"/u\",\n",
-      "          \"hdf5:size\": 4,\n",
-      "          \"hdf5:value\": {\n",
-      "            \"@id\": \"https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient\"\n",
-      "          },\n",
-      "          \"standard_name\": {\n",
-      "            \"@id\": \"https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient\"\n",
-      "          }\n",
-      "        },\n",
-      "        \"hdf5:name\": \"/\"\n",
-      "      }\n",
-      "    }\n",
-      "  ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "json_str = jsonld.dumps(\n",
-    "        h5.hdf_filename,\n",
-    "        indent=2,\n",
-    "        context={'m4i': 'http://w3id.org/nfdi4ing/metadata4ing#',\n",
-    "                 'foaf': 'http://xmlns.com/foaf/0.1/'}\n",
-    "    )\n",
-    "print(json_str)"
+    "ttl = h5tbx.serialize(h5.hdf_filename,\n",
+    "                      format=\"ttl\",\n",
+    "                      context={'ssno': 'https://matthiasprobst.github.io/ssno#'})\n",
+    "print(ttl)"
    ]
   },
   {
@@ -383,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "47615dc8-6b13-411f-af08-6c8cd3812d3a",
    "metadata": {},
    "outputs": [],
@@ -403,20 +97,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6163c77c-73e2-44bc-9c3a-91b00eb9cdff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/u https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "g = rdflib.Graph().parse(data=json_str, format='json-ld')\n",
+    "g = rdflib.Graph().parse(data=ttl, format='ttl')\n",
     "qres = g.query(sparql_query_str)\n",
     "\n",
     "for name, sn in qres:\n",
@@ -433,23 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "540348e4-aae0-4f55-92bb-06f57ab925cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_dataset_from_standard_name(hdf_filename, sn, limit=1):\n",
     "    sparql_query_str = \"\"\"\n",
-    "    PREFIX hdf5: <http://purl.allotrope.org/ontologies/hdf5/1.8#>\n",
+    "    PREFIX hdf: <http://purl.allotrope.org/ontologies/hdf5/1.8#>\n",
     "    PREFIX ssno: <https://matthiasprobst.github.io/ssno#>\n",
     "    \n",
     "    SELECT ?name\n",
     "    {\n",
-    "        ?obj a hdf5:Dataset .\n",
-    "        ?obj hdf5:name ?name .\n",
+    "        ?obj a hdf:Dataset .\n",
+    "        ?obj hdf:name ?name .\n",
     "    \"\"\"\n",
     "    sparql_query_str += f\"?obj ssno:hasStandardName <{sn}> .\\n}}\"\n",
-    "    g = rdflib.Graph().parse(data=json_str, format='json-ld')\n",
+    "    g = rdflib.Graph().parse(data=ttl, format='ttl')\n",
     "    qres = g.query(sparql_query_str)\n",
     "\n",
     "    if limit == 1:\n",
@@ -461,67 +147,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0a7c2be4-d1d8-4180-a360-afb481076eee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/u'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "find_dataset_from_standard_name(\n",
     "    h5.hdf_filename,\n",
-    "    'https://matthiasprobst.github.io/pivmeta#piv_correlation_coefficient',\n",
+    "    'https://local.org/standard_names/piv_correlation_coefficient',\n",
     "    limit=1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "24c511cc-b002-419a-ac30-b4cb0137fd3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_attribute_from_name(hdf_filename, name, limit=1):\n",
+    "def find_attribute_from_name(hdf_filename, attr_name, limit=1):\n",
     "    sparql_query_str = f\"\"\"\n",
-    "    PREFIX hdf5: <http://purl.allotrope.org/ontologies/hdf5/1.8#>\n",
+    "    PREFIX hdf: <http://purl.allotrope.org/ontologies/hdf5/1.8#>\n",
     "    \n",
     "    SELECT  ?name\n",
     "    {{\n",
     "        ?obj a ?type .\n",
-    "        ?obj hdf5:name ?name .\n",
-    "        ?obj hdf5:attribute ?attr .\n",
-    "        ?attr hdf5:name \"{name}\" .\n",
-    "        VALUES ?type {{  hdf5:Group hdf5:Dataset }}\n",
+    "        ?obj hdf:name ?name .\n",
+    "        ?obj hdf:attribute ?attr .\n",
+    "        ?attr hdf:name \"{attr_name}\" .\n",
+    "        VALUES ?type {{  hdf:Group hdf:Dataset }}\n",
     "    }}\n",
     "    \"\"\"\n",
-    "    g = rdflib.Graph().parse(data=json_str, format='json-ld')\n",
+    "    g = rdflib.Graph().parse(data=ttl, format='ttl')\n",
     "    qres = g.query(sparql_query_str)\n",
+    "\n",
+    "    def _get_attr(hdf_filename, obj_name, ak):\n",
+    "        with h5tbx.File(hdf_filename, 'r') as h5:\n",
+    "            return h5[obj_name].attrs[ak]\n",
     "\n",
     "    if limit == 1:\n",
     "        for name in qres:\n",
-    "            return str(name[0])\n",
+    "            return {attr_name: _get_attr(hdf_filename, str(name[0]), attr_name)}\n",
     "    else:\n",
-    "        return [str(name[0]) for name in qres]"
+    "        return {attr_name: [_get_attr(hdf_filename, str(name[0]), attr_name) for name in qres]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "34444dda-921e-4f4c-8215-9382f6ca4fd6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "find_attribute_from_name(h5.hdf_filename, 'codeRepository', 1)"
+    "find_attribute_from_name(h5.hdf_filename, 'standard_name', limit=1)"
    ]
   },
   {
@@ -549,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
